# zlearn

./: .clang-format  .gitignore  CMakeLists.txt
include/: CLI11.hpp
scripts/: LOC.sh  compare.py  rerun_criteo.py  run_criteo.py  run_ml-100k.py  run_ml-20m.py  tuner.py
src/: CMakeLists.txt  application.cpp  application.h  application_impl.cpp  application_impl.h  cli.h  main.cpp  predict.cpp  train.cpp
src/base/: CMakeLists.txt  algebra.h  common.h  config.h  defer.hpp  enum_db.h  exception.hpp  io_util.cpp  io_util.h  logger.cpp  logger.h  macros.h  math.h  platform.h  random.h  serial.h  str-hash.h  str-inl.cpp  str-inl.h  str.cpp  str.h  thread_pool.cpp  thread_pool.h  timer.h
src/data/: CMakeLists.txt  data_set.cpp  data_set.h  entry.cpp  entry.h  sampler.cpp  sampler.h
src/model/: CMakeLists.txt  ffm.cpp  ffm.h  fm.cpp  fm.h  hofm.cpp  hofm.h  lm.cpp  lm.h  metric.cpp  metric.h  model.cpp  model.h  serial.cpp
src/optimizer/: CMakeLists.txt  opt_ada_grad.cpp  opt_adam.cpp  opt_adam_unbiased.cpp  opt_ams_grad.cpp  opt_momentum.cpp  opt_rms_prop.cpp  opt_sgd.cpp  optimizer.h
src/utility/: CMakeLists.txt  csv2ffm.cpp  csv2ffm.h  main_csv2ffm.cpp
test/: CMakeLists.txt  data.out  ffm_no_label.txt  test_data_set.cpp  test_model.cpp  test_optimizer.cpp  test_sampler.cpp  test_thread_pool.cpp
